feat: nearly completed user management module